RESOLVED FIXED145967
Fix build break when ENABLE_SECCOMP_FILTERS is ON
https://bugs.webkit.org/show_bug.cgi?id=145967
Summary Fix build break when ENABLE_SECCOMP_FILTERS is ON
Ryuan Choi
Reported 2015-06-15 03:38:57 PDT
../../Source/WebKit2/Shared/linux/SeccompFilters/OpenSyscall.cpp: In member function ‘virtual void WebKit::OpenSyscallResult::encode(IPC::ArgumentEncoder&) const’: ../../Source/WebKit2/Shared/linux/SeccompFilters/OpenSyscall.cpp:203:41: error: cannot bind ‘IPC::Attachment’ lvalue to ‘IPC::Attachment&&’ encoder.addAttachment(attachment); ^ In file included from ../../Source/WebKit2/Platform/IPC/ArgumentCoders.h:30:0, from ../../Source/WebKit2/Shared/linux/SeccompFilters/OpenSyscall.cpp:31: ../../Source/WebKit2/Platform/IPC/ArgumentEncoder.h:68:10: error: initializing argument 1 of ‘void IPC::ArgumentEncoder::addAttachment(IPC::Attachment&&)’ void addAttachment(Attachment&&); ^ ninja: build stopped: subcommand failed.
Attachments
Patch (1.38 KB, patch)
2015-06-15 03:45 PDT, Ryuan Choi
no flags
Ryuan Choi
Comment 1 2015-06-15 03:45:29 PDT
Carlos Garcia Campos
Comment 2 2015-06-15 08:50:51 PDT
Comment on attachment 254868 [details] Patch Oops, sorry about this.
WebKit Commit Bot
Comment 3 2015-06-15 15:27:40 PDT
Comment on attachment 254868 [details] Patch Clearing flags on attachment: 254868 Committed r185568: <http://trac.webkit.org/changeset/185568>
WebKit Commit Bot
Comment 4 2015-06-15 15:27:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.