Fix build break when ENABLE_SECCOMP_FILTERS is ON https://bugs.webkit.org/show_bug.cgi?id=145967

Reviewed by Carlos Garcia Campos.

Since r183189, ArgumentEncoder::addAttachment requires rvalue reference.

* Shared/linux/SeccompFilters/OpenSyscall.cpp:
(WebKit::OpenSyscallResult::encode): Use WTF::move().


Canonical link: https://commits.webkit.org/164028@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185568 268f45cc-cd09-0410-ab3c-d52691b4dbfc